Fix text not showing correct spacing for mobile devices

--- a/index.css
+++ b/index.css
@@ -104,4 +104,7 @@ p {
     font-size: 16px;
     line-height: 1.6;
   }
+  p {
+    text-align: left;
+  }
 }
